--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
-<?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Njob-income-tracker</string>
-    <string name="title_activity_main">Njob-income-tracker</string>
+    <string name="app_name">N잡 수입 관리</string>
+    <string name="title_activity_main">N잡 수입 관리</string>
     <string name="package_name">app.njobtracker.sideincome</string>
     <string name="custom_url_scheme">app.njobtracker.sideincome</string>
 </resources>
